--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -76,6 +76,10 @@
                   <artifactId>maven-surefire-plugin</artifactId>
                </plugin>
                <plugin>
+                  <groupId>org.codehaus.cargo</groupId>
+                  <artifactId>cargo-maven2-plugin</artifactId>
+               </plugin>
+               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-antrun-plugin</artifactId>
                </plugin>
