--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -38,7 +38,7 @@
 
       <dependency>
          <groupId>org.jboss.seam.solder</groupId>
-         <artifactId>seam-solder-api</artifactId>
+         <artifactId>seam-solder</artifactId>
       </dependency>
 
       <dependency>
