--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -63,6 +63,10 @@
          <build>
             <plugins>
                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-dependency-plugin</artifactId>
+               </plugin>
+               <plugin>
                   <groupId>org.codehaus.mojo</groupId>
                   <artifactId>emma-maven-plugin</artifactId>
                </plugin>
