--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
    <properties>
       <seam.version>3.0.0.b07</seam.version>
       <arquillian.version>1.0.0.Alpha4</arquillian.version>
+      <emma.version>2.0.5312</emma.version>
    </properties>
 
    <modules>
@@ -68,28 +69,45 @@
       </profile>
       <profile>
          <id>code-coverage</id>
+         <dependencies>
+            <dependency>
+               <groupId>emma</groupId>
+               <artifactId>emma</artifactId>
+               <version>${emma.version}</version>
+            </dependency>
+         </dependencies>
          <build>
             <pluginManagement>
                <plugins>
                   <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-antrun-plugin</artifactId>
+                     <artifactId>maven-dependency-plugin</artifactId>
                      <executions>
                         <execution>
                            <id>deploy-emma-jar</id>
                            <phase>process-test-sources</phase>
                            <goals>
-                              <goal>run</goal>
+                              <goal>copy</goal>
                            </goals>
                            <configuration>
-                              <tasks>
-                                 <echo message="Deploying emma jar to server lib directory" />
-                                 <copy file="${emma.jar.file}"
-                                    todir="${env.JBOSS_HOME}/server/default/lib"
-                                    overwrite="true" />
-                              </tasks>
+                              <artifactItems>
+                                 <artifactItem>
+                                    <groupId>emma</groupId>
+                                    <artifactId>emma</artifactId>
+                                    <version>${emma.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${env.JBOSS_HOME}/server/default/lib</outputDirectory>
+                                 </artifactItem>
+                              </artifactItems>
                            </configuration>
                         </execution>
+                     </executions>
+                  </plugin>
+                  <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-antrun-plugin</artifactId>
+                     <executions>
                         <execution>
                            <id>retrieve-coverage-file</id>
                            <phase>test</phase>
@@ -100,12 +118,26 @@
                               <tasks>
                                  <move file="${env.JBOSS_HOME}/bin/coverage.ec"
                                     todir="${basedir}" failonerror="false" />
-                                 <delete file="${basedir}/transaction.log"
-                                    failonerror="false" />
                               </tasks>
                            </configuration>
                         </execution>
                      </executions>
+                  </plugin>
+                  <plugin>
+                     <artifactId>maven-clean-plugin</artifactId>
+                     <configuration>
+                        <filesets>
+                           <fileset>
+                              <directory>${basedir}/</directory>
+                              <includes>
+                                 <include>**/*.ec</include>
+                                 <include>**/*.em</include>
+                                 <include>**/transaction.log</include>
+                              </includes>
+                              <followSymlinks>false</followSymlinks>
+                           </fileset>
+                        </filesets>
+                     </configuration>
                   </plugin>
                </plugins>
             </pluginManagement>
