--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
          <modules>
             <module>dist</module>
             <module>docs/reference</module>
+	    <module>examples/seam-jms-example-rest</module>
          </modules>
       </profile>
       <profile>
