--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
    <url>http://sfwk.org/Seam3/JMS</url>
 
    <properties>
-      <seam.version>3.0.0.CR6</seam.version>
+      <seam.version>3.0.0.Final</seam.version>
       <arquillian.version>1.0.0.Alpha4</arquillian.version>
       <emma.version>2.0.5312</emma.version>
    </properties>
