--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
          <modules>
             <module>dist</module>
             <module>docs/reference</module>
-	    <module>examples/seam-jms-example-rest</module>
+	    <module>examples/jms-statuswatcher</module>
          </modules>
       </profile>
       <profile>
@@ -188,7 +188,7 @@
 
    <issueManagement>
       <system>JIRA</system>
-      <url>http://issues.jboss.org/browse/SEAMJMS</url>
+      <url>https://issues.jboss.org/browse/SEAMJMS</url>
    </issueManagement>
 
    <ciManagement>
