--- a/examples/jms-statuswatcher/pom.xml
+++ b/examples/jms-statuswatcher/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
       <groupId>org.jboss.seam.jms</groupId>
       <artifactId>seam-jms-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Beta1</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
@@ -18,7 +17,7 @@
    <properties>
       <jboss.home>${env.JBOSS_HOME}</jboss.home>
       <jboss.domain>default</jboss.domain>
-      <seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
+      <seam.jms.version>3.0.0.Beta1</seam.jms.version>
       <jsf.version>2.0.2-FCS</jsf.version>
       <ajax4jsf.version>1.0.5</ajax4jsf.version>
    </properties>
